# python-enigma

./: .gitignore  README.rst  pyproject.toml  readme.md
docs/source/: api.rst  conf.py  index.rst  plugboard.rst  usage.rst
pyenigma_api/: __init__.py  apis_headless.py  config.py  main.py  plugboard.py  rotors.py  switchboard.py  tests.py
src/python-enigma/: components.py  main.py
tests/Unit/: plugboard_test.py
tests/unit/: switchboard_test.py
